[package]
name = "rlay_client_lib_experiment_macros"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
rlay_ontology = { version = "0.2.6", features = ["web3_compat"] }
syn = { version = "1.0.14", features = ["full"] }
quote = "1.0.2"
serde_json = "1.0.45"
serde = { version = "1.0.104", features = ["derive"] }
heck = "0.3.1"
cid_fork_rlay = "0.3.1"
